--- a/css/styles.css
+++ b/css/styles.css
@@ -109,7 +109,6 @@ font-weight: 400;
 }
 
 .main .item-text {
-    font-weight: 400;
     font-size: 14px;
     line-height: calc(24 / 14);
     letter-spacing: 0.03em;
@@ -135,7 +134,6 @@ font-weight: 400;
 }
 
 .main .list-text {
-    font-weight: 400;
     font-size: 16px;
     line-height: calc(19 /16);
     text-align: center;
@@ -146,9 +144,10 @@ font-weight: 400;
 /*Main Portfolio*/
 
 .btn-p {
+    font-family: inherit;
     font-weight: 500;
     font-size: 16px;
-    line-height: 26px;
+    line-height: calc(26 / 16);
     text-align: center;
     letter-spacing: 0.03em;
     color: var(--main-txt-cl);
@@ -163,15 +162,14 @@ font-weight: 400;
 .list-title-p {
     font-weight: 700;
     font-size: 18px;
-    line-height: 36px;
+    line-height: calc(36 / 18);
     letter-spacing: 0.06em;
     color: var(--main-txt-cl)
 }
 
 .list-text-p {
-    font-weight: 400;
     font-size: 16px;
-    line-height: 30px;
+    line-height: calc(30 / 16);
     letter-spacing: 0.03em;
     color: var(--txt-cl)
 }
@@ -196,7 +194,6 @@ font-weight: 400;
 
 .footer .list-item {
     font-style: normal;
-    font-weight: 400;
     font-size: 14px;
     line-height: calc(24 / 14);
     letter-spacing: 0.03em;
@@ -209,4 +206,9 @@ font-weight: 400;
 .footer .mail,
 .footer .tel {
     color: rgba(255, 255, 255, 0.6);
+}
+
+.mail:hover, .mail:focus,
+.tel:hover, .tel:focus {
+    color: var(--accent-txt-cl)
 }
